# plonkyard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
bootcamp/rareskills/homework-02/: README.md
bootcamp/rareskills/homework-03/: README.md
bootcamp/rareskills/homework-04/: README.md
bootcamp/rareskills/homework-05/: README.md
crates/01-mul/: Cargo.toml
crates/01-mul/src/: lib.rs
crates/02-add-five-rows/: Cargo.toml
crates/02-add-five-rows/src/: lib.rs
crates/02-copy/: Cargo.toml
crates/02-copy/src/: lib.rs
crates/03-add-mul-selectors/: Cargo.toml
crates/03-bool/: Cargo.toml
crates/04-bit-decomp/: Cargo.toml
crates/04-high-degree-gate/: Cargo.toml
crates/05-instance-column/: Cargo.toml
crates/05-select/: Cargo.toml
crates/06-fib-one-column/: Cargo.toml
crates/06-is-zero/: Cargo.toml
crates/07-bool/: Cargo.toml
crates/07-range/: Cargo.toml
crates/08-bit-decomp/: Cargo.toml
crates/08-fib/: Cargo.toml
crates/09-lookups/: Cargo.toml
crates/09-range-0-16/: Cargo.toml
crates/10-fib-constants/: Cargo.toml
crates/10-poseidon/: Cargo.toml
crates/11-fib-public-output/: Cargo.toml
crates/11-merkle-path/: Cargo.toml
crates/12-arithmetic-chip/: Cargo.toml
crates/13-is-zero-chip/: Cargo.toml
crates/14-polynomial-a5-plus-a/: Cargo.toml
crates/15-xor-32/: Cargo.toml
crates/common/: Cargo.toml
crates/halo2-exercises/: Cargo.toml
docs/: learning-path.md
notes/: glossary.md  lookups.md  permutation-argument.md  rows-columns-selectors.md  weekend-plan.md
(+24 files in other folders)
