[workspace]
members = [
    "crates/01-mul",
    "crates/02-copy",
    "crates/03-bool",
    "crates/04-bit-decomp",
    "crates/05-select",
    "crates/06-is-zero",
    "crates/07-range",
    "crates/08-fib",
    "crates/09-lookups",
    "crates/10-poseidon",
    "crates/11-merkle-path",
    "crates/common",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xpantera/plonkyard"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
