[workspace]
members = [
    "crates/01-mul",
    "crates/02-add-five-rows",
    "crates/03-add-mul-selectors",
    "crates/04-high-degree-gate",
    "crates/05-instance-column",
    "crates/06-fib-one-column",
    "crates/07-bool",
    "crates/08-bit-decomp",
    "crates/09-range-0-16",
    "crates/10-fib-constants",
    "crates/11-fib-public-output",
    "crates/12-arithmetic-chip",
    "crates/13-is-zero-chip",
    "crates/14-polynomial-a5-plus-a",
    "crates/15-xor-32",
    "crates/common",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xpantera/plonkyard"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
